--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@ Manuscript 2020<br>
 Draft of full version  <a href="papers/TimeMemTO/TimeMemTO.pdf">[pdf]</a><br><br>
 
 <div class="box">
-<p>
+<p><span class=blu1></span><span class=blu2></span>
 We study time/memory tradeoffs of function inversion: an algorithm, i.e.,  an  inverter,  equipped with  an <span class=blu2>s</span>-bit advice for a randomly chosen function <span class=blu2>f:[n]&rarr;[n]</span> and using <span class=blu2>q</span>  oracle queries to <span class=blu2>f</span>,
  tries to invert a randomly chosen output <span class=blu2>y</span> of <span class=blu2>f</span>  (i.e., to find <span class=blu2>x</span> such that <span class=blu2>f(x)=y</span>).  <br><br>
   
@@ -760,11 +760,14 @@ protocol of  <span class=blu1> Awerbuch, Blum, Chor, Goldwasser, and Micali [Man
 Our main result is a tighter lower bound on the bias of coin-flipping protocols, showing that, for every constant <span class=blu2> &epsilon; > 0</span>, an <span class=blu2> r<sup>&epsilon;</sup></span>-party <span class=blu2> r</span>-round coin-flipping protocol can be efficiently biased by <span class=blu2> &Omega;(1/&radic;<span style="text-decoration:overline;">r</span>)</span>. As far as we know, this is the first improvement of Cleve's bound that holds in the
 standard model, and is only <span class=blu2> r<sup>&epsilon;</sup></span> (multiplicative) far from the aforementioned upper bound of <span class=blu1>  Awerbuch et al</span>.<br><br>
 
-For proving the above lower bound, we present two new results that we believe are of independent interest. The first result is that a sequence of (augmented) weak martingales have large gap: with constant probability there exists two adjacent variables whose gap is at least
-the ratio between the gap between the first and last variables and the square root of the number
-of variables. This generalizes the result of <span class=blu1> Cleve and Impagliazzo [Manuscript '93]</span>, who proved
-that the above holds for strong martingales. The second result is a new sampling algorithm that
-uses a differentially private mechanism to minimize the effect of data divergence.</p>
+
+We  prove the above  bound using   two new results that we believe are of independent interest. 
+The first result is that a sequence  of (``augmented'') weak martingales have large gap:  with constant probability there exists two adjacent variables whose gap
+is  at least the ratio between the gap between the first and last variables and  the square root of the number of variables. 
+This  generalizes over the  result of <span class=blu1> Cleve and Impagliazzo [Manuscript '93]</span>, who showed that the above holds for strong martingales, 
+and allows in some setting to exploit this gap by efficient algorithms.  We prove the above using   a  novel argument  that does not follow the more complicated 
+approach of  <span class=blu1> Cleve and Impagliazzo</span>. 
+The second result is a new sampling algorithm  that uses a differentially private mechanism to minimize  the effect of data divergence.
 </div>
 </li>
 
