--- a/index.html
+++ b/index.html
@@ -472,6 +472,31 @@ In this work we close the above gap, proving that no n-party protocol (of any ro
 </div>
 </li>
 
+<li>
+Iftach Haitner,   <a href="https://omereingold.wordpress.com/">Omer Reingold</a>,
+<a href="http://www.eecs.harvard.edu/%7Esalil/">Salil Vadhan</a> and  <a href="https://www.di.ens.fr/~wee/">Hoeteck Wee</a><br>
+ <b>IE1: Inaccessible Entropy Generators and Statistically Hiding
+Commitments from One-Way Functions</b><br>Manuscript 2020<br>
+<span class=abslide>[abstract]</span> <br>
+Draft of full version  <a href="papers/AccessibleEntropy/IE1.pdf">[pdf]</a><br>
+
+A preliminary version, with a different notion of accessible entropy, appeared in <span class=blu1>Inaccessible Entropy [STOC '09]</span><br><br>
+<div class="box">
+<p>
+We put forth a new computational notion of entropy, measuring the (in)feasibility of sampling
+high-entropy strings that are consistent with a given generator. Specifically, the i'th output block
+of a generator <span class=blu2>G</span> has accessible entropy at most <span class=blu2>k</span> if the following holds: when conditioning on its
+prior coin tosses, no polynomial-time strategy <span class=blu2>G*</span>
+can generate valid output for <span class=blu2>G</span>'s <span class=blu1>i</span>'th output block with entropy greater than <span class=blu2>k</span>. 
+A generator has inaccessible entropy if the total accessible
+entropy (summed over the blocks) is noticeably smaller than the real entropy of <span class=blu2>G</span>'s output.<br>
+As an application of the above notion, we improve upon the result of <span class=blu1>Haitner, Nguyen, Ong,
+Reingold, and Vadhan [Sicomp '09]</span>, presenting a much simpler and more ecient construction
+of statistically hiding commitment schemes from arbitrary one-way functions.
+</p>
+</div>
+</li>
+
 
 <li>
 <a href="http://people.csail.mit.edu/itayberm/">Itay Berman</a> and Iftach Haitner and Eliad Tsfadia. <br>
