--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@ See the <a href="http://cpiis.cs.tau.ac.il/postdoc-fellowships-internships/">TAU
 Dror Chawin and Iftach Haitner and Noam Mazor. <br>
 <strong>Lower Bounds on the Time/Memory Tradeoff of Function Inversion</strong>  <img src="new.png" class=update1><br>
 <span class=abslide>[abstract]</span> <br>
-Manuscript 2020<br>
+TCC 2020<br>
 Draft of full version  <a href="papers/TimeMemTO/TimeMemTO.pdf">[pdf]</a><br><br>
 
 <div class="box">
@@ -455,6 +455,20 @@ We make progress on the above intriguing  question, both for the adaptive and th
 </div>
 </li>
 
+<li>
+<a href="https://www.cs.bgu.ac.il/~beimel/">Amos Beimel </a> and Iftach Haitner and <a href="http://people.cs.georgetown.edu/~kobbi/">Kobbi Nissim</a> and  <a href="https://www.uri.co.il/">Uri Stemmer</a> <br>
+<strong>On the Round Complexity of the Shuffle Model</strong>  <img src="new.png" class=update1><br>
+<!-- <span class=abslide>[abstract]</span> <br> --!>
+TCC 2020<br> <br>
+
+<div class="box">
+<p><span class=blu1></span><span class=blu2></span>
+Soon...
+</p>
+</div>
+</li>
+
+
 <li>Iftach Haitner and Yonatan Karidi-Heller. <br>
 <strong>A Tight Lower Bound on Adaptively Secure Full-Information Coin Flip</strong>  <img src="new.png" class=update1><br>
 <span class=abslide>[abstract]</span> <br>
@@ -475,7 +489,7 @@ In this work we close the above gap, proving that no <span class=blu2>n</span>-p
 Iftach Haitner,   <a href="https://omereingold.wordpress.com/">Omer Reingold</a>,
 <a href="http://www.eecs.harvard.edu/%7Esalil/">Salil Vadhan</a> and  <a href="https://www.di.ens.fr/~wee/">Hoeteck Wee</a><br>
  <b>IE1: Inaccessible Entropy Generators and Statistically Hiding
-Commitments from One-Way Functions</b><br>Manuscript 2020<br>
+Commitments from One-Way Functions</b> <img src="up.png" class=update1><br>Manuscript 2020<br>
 <span class=abslide>[abstract]</span> <br>
 Draft of full version  <a href="papers/AccessibleEntropy/IE1.pdf">[pdf]</a><br>
 
@@ -536,7 +550,7 @@ by presenting a matching protocol.
 
 <li>
 <a href="https://people.csail.mit.edu/rancohen/">Ran Cohen</a> and Iftach Haitner and Nikolaos Makriyannis and Matan Orland and <a href="http://www.cs.huji.ac.il/~salex/">Alex Samorodnitsky</a></a><br>
-<strong>On the Round Complexity of Randomized Byzantine Agreement</strong> <img src="new.png" class=update1><br>
+<strong>On the Round Complexity of Randomized Byzantine Agreement</strong> <br>
 <span class=abslide>[abstract]</span> <br>
 DISC  2019<br>
 Draft of full version  <a href="papers/ByzAgmntLB/BA_Full.pdf">[pdf]</a><br><br>
@@ -572,7 +586,7 @@ The third bound essentially matches the recent protocol of <span class=blu1>Mica
 <li>
 Iftach Haitner and Noam Mazor and <a href="http://www.cs.haifa.ac.il/%7Eronen/">Ronen Shaltiel</a> and Jad Silbak. <br>
 <strong>Channels of Small Log-Ratio Leakage and
-Characterization of Two-Party Differentially Private Computation</strong>  <img src="new.png" class=update1><br>
+Characterization of Two-Party Differentially Private Computation</strong><br>
 <span class=abslide>[abstract]</span> <br>
 TCC 2019<br>
 Draft of full version  <a href="papers/LogRatioChannels/LogRatioChannels.pdf">[pdf]</a><br><br>
@@ -605,7 +619,7 @@ extends to functions (over many bits) that "contain" an "embedded copy" of the X
 
 <li>
 <a href="https://sites.google.com/site/nirbitansky/">Nir Bitansky</a>  and Iftach Haitner and <a href="http://ilan.tech.cornell.edu/">Ilan Komargodski</a> and  <a href="https://sites.google.com/site/eylonyogev/">Eylon Yogev</a>. <br>
-<strong>Distributional Collision Resistance Beyond One-Way Functions</strong>  <img src="new.png" class=update1><br>
+<strong>Distributional Collision Resistance Beyond One-Way Functions</strong><br>
 <span class=abslide>[abstract]</span> <br>
 Eurocrypt 2019<br>
 Draft of full version  <a href="papers/DCRH/DCRH.pdf">[pdf]</a><br><br>
@@ -623,7 +637,7 @@ A corollary of the first result is that constant-round statistically hiding comm
 
 <li>
 Iftach Haitner  and Noam Mazor and <a href="http://www.cs.tau.ac.il/~roshman/">Rotem Oshman</a> and  <a href="https://engineering.stanford.edu/people/omer-reingold">Omer Reingold</a> and  <a href="https://yehudayoff.net.technion.ac.il/">Amir Yehudayoff</a><br>
-<strong>On the Communication Complexity of Key-Agreement Protocols</strong> <img src="new.png" class=update1><br>
+<strong>On the Communication Complexity of Key-Agreement Protocols</strong><br>
 <span class=abslide>[abstract]</span> <br>
 
 ITCS 2019<br>
@@ -911,7 +925,7 @@ Journal of Cryptology 2017 <a  href="http://rdcu.be/v7wO">[link]</a><br>
 <li>
 <p>
 Iftach Haitner and  <a href="http://www.cs.technion.ac.il/%7Eyuvali/">Yuval Ishai</a> and <a href="http://omrier.wix.com/eran-omri">Eran Omri</a>  and   <a href="http://www.cs.haifa.ac.il/%7Eronen/">Ronen Shaltiel</a><br>
-<strong>Parallel Hashing via List Recoverability</strong> <!-- <img src="new.png" class=update1> --><br>
+<strong>Parallel Hashing via List Recoverability</strong> <br>
 <span class=abslide>[abstract]</span><br>
 Crypto 2015  <a href="https://link.springer.com/chapter/10.1007/978-3-662-48000-7_9">[link]</a><br>
 <!-- !Draft of full version  <a href="papers/CRHDomainExtension/CRH_Crypto.pdf">[pdf]</a><br> -->
