--- a/index.html
+++ b/index.html
@@ -1058,12 +1058,13 @@ random oracle model,  implying that protocols for computing these functionalitie
 
 
 <li>
-<p><a href="http://people.csail.mit.edu/itayberm/">Itay Berman</a> and Iftach Haitner and 
+<a href="http://people.csail.mit.edu/itayberm/">Itay Berman</a> and Iftach Haitner and 
 <a href="https://sites.google.com/site/ilankomhomepage/"> Ilan Komargodski</a> and <a href="http://www.wisdom.weizmann.ac.il/%7Enaor/">Moni Naor</a><br>
 <strong>Hardness Preserving Reductions via Cuckoo Hashing </strong><br> 
 <span class=abslide>[abstract]</span><br>
 TCC 2013 <a href="papers/Cuckoo/Cuckoo_TCC.pdf">[pdf]</a><br>
-Journal of Cryptology 2018 <a href="https://link.springer.com/article/10.1007/s00145-018-9293-0">[link]</a></p>
+Journal of Cryptology 2018 <a href="https://link.springer.com/article/10.1007/s00145-018-9293-0">[link]</a><br>
+Draft of full version  <a href="papers/Cuckoo/Cuckoo.pdf">[pdf]</a> <br><br>
 
 <div class="box">
 A common method for increasing the usability and uplifting the security of pseudorandom function families (PRFs) is to “hash” the inputs into a
