--- a/index.html
+++ b/index.html
@@ -459,7 +459,10 @@ We make progress on the above intriguing  question, both for the adaptive and th
 <a href="https://www.cs.bgu.ac.il/~beimel/">Amos Beimel </a> and Iftach Haitner and <a href="http://people.cs.georgetown.edu/~kobbi/">Kobbi Nissim</a> and  <a href="https://www.uri.co.il/">Uri Stemmer</a> <br>
 <strong>On the Round Complexity of the Shuffle Model</strong>  <img src="new.png" class=update1><br>
 <!-- <span class=abslide>[abstract]</span> <br> --!>
-TCC 2020<br> <br>
+TCC 2020<br> 
+
+Draft of full version  <a href="papers/ShuffleModelRound/2RoundShuffleModel.pdf">[pdf]</a><br><br>
+
 
 <div class="box">
 <p><span class=blu1></span><span class=blu2></span>
