--- a/index.html
+++ b/index.html
@@ -348,13 +348,23 @@ The prizes are given for outstanding papers published in SIAM journals during th
 <h2> Teaching  </h2>
 <ul>
 
+<li><a  href="http://moodle.tau.ac.il/2020/course/view.php?id=368413101"> Foundation  of Cryptography, Advanced Topics (Spring 21)</a></li>
+
+
+<li><a href="http://moodle.tau.ac.il/2020/course/view.php?id=368220001">Computational Models (Fall 20)</a></li>
+
+
+<li><a  href="http://moodle.tau.ac.il/2020/course/view.php?id=368416201">Foundation  of Cryptography, the Basics (Fall 20)</a></li>
+
+
+<li><a href="https://moodle.tau.ac.il/2020/course/view.php?id=368419101"> Applications of Combinatorics Tools in Cryptography  (student seminar)&nbsp; (Fall 20)</a></li>
+
+
 <li><a href="https://moodle.tau.ac.il/2019/course/view.php?id=368448601"> Applications of Information Theory&nbsp; (Fall 19)</a></li>
 
 <li><a href="https://moodle.tau.ac.il/2019/course/view.php?id=368415201"> Zero Knowledge Proofs (student seminar)&nbsp; (Fall 19)</a></li>
 
-<li><a href="http://moodle.tau.ac.il/2019/course/view.php?id=368220001">Computational Models (Fall 19)</a></li>
 
-<li><a  href="http://moodle.tau.ac.il/2018/course/view.php?id=368416201">Foundation  of Cryptography, the Basics (Spring 19)</a></li>
 
 
 
@@ -366,8 +376,7 @@ The prizes are given for outstanding papers published in SIAM journals during th
 
 
 
- <li><a  href="http://moodle.tau.ac.il/2016/course/view.php?id=368413101"> Foundation  of Cryptography, Advanced Topics (Spring 17)</a></li>
-
+ 
  
   <li><a href="http://www.cs.tau.ac.il/%7Eiftachh/Courses/Seminars/MPC/Spring17.html"> Multi-Party Computation (student seminar)&nbsp; (Spring 17)</a></li>
 
@@ -380,7 +389,7 @@ The prizes are given for outstanding papers published in SIAM journals during th
  
  <br><br>
   
-   <li><a href="https://groups.google.com/forum/#!forum/foc-at-tau"> Advanced Cryptography seminar (by invitation only).&nbsp; Thursdays 13-15, Room 480</a></li>
+   <li><a href="https://groups.google.com/forum/#!forum/foc-at-tau"> Advanced Cryptography seminar (by invitation only).&nbsp; Thursdays 14-16, Room 480</a></li>
 
   </ul></div>
  
