--- a/index.html
+++ b/index.html
@@ -1330,6 +1330,9 @@ Reingold</a>, <a href="http://www.eecs.harvard.edu/%7Esalil/">Salil Vadhan</a> a
 <b>Universal One-Way Hash Functions via Inaccessible Entropy </b><br>
 <span class=abslide>[abstract]</span><br>
 Advances in Cryptology - Eurocrypt, 2010 <a href="papers/RompelRevisted/RompelRevisited-EurocryptCamera.pdf">[pdf]</a><br>
+
+Theory of Computing 2020 <a  href="http://theoryofcomputing.org/articles/v016a008/">[link]</a> <img src="up.png" class=update1><br>
+
 Draft of full version <a href="papers/RompelRevisted/RompelRevisited-eprint.pdf">[pdf]</a>
 </p>
 
@@ -1408,8 +1411,7 @@ as the verifier is also given a good approximation of the value <span class=blu2
 
 
 <li>
-<p><a name="HONRV"></a>
-Iftach Haitner, Minh-Huyen Nguyen, Shien Jin Ong, <a href="http://www.wisdom.weizmann.ac.il/%7Ereingold">OmercReingold</a> and <a href="http://www.eecs.harvard.edu/%7Esalil/">Salil Vadhan</a><br>
+<p><a name="HONRV"></a>Iftach Haitner, Minh-Huyen Nguyen, Shien Jin Ong, <a href="http://www.wisdom.weizmann.ac.il/%7Ereingold">OmercReingold</a> and <a href="http://www.eecs.harvard.edu/%7Esalil/">Salil Vadhan</a><br>
 <strong>Statistically Hiding Commitments and Statistical Zero-Knowledge Arguments from Any One-Way Function</strong> <br>
 <span class=abslide>[abstract]</span>  <br>
 SIAM Journal of Computing 2009  <a  href="http://epubs.siam.org/doi/abs/10.1137/080725404">[link]</a><br>
