--- a/index.html
+++ b/index.html
@@ -425,7 +425,8 @@ Dror Chawin and Iftach Haitner and Noam Mazor. <br>
 <strong>Lower Bounds on the Time/Memory Tradeoff of Function Inversion</strong>  <img src="new.png" class=update1><br>
 <span class=abslide>[abstract]</span> <br>
 TCC 2020<br>
-Draft of full version  <a href="papers/TimeMemTO/TimeMemTO.pdf">[pdf]</a><br><br>
+Draft of full version  <a  href="https://eccc.weizmann.ac.il/report/2020/089/">[eccc]</a><br><br>
+
 
 <div class="box">
 <p><span class=blu1></span><span class=blu2></span>
@@ -470,7 +471,7 @@ We make progress on the above intriguing  question, both for the adaptive and th
 <!-- <span class=abslide>[abstract]</span> <br> --!>
 TCC 2020<br> 
 
-Draft of full version  <a href="papers/ShuffleModelRound/2RoundShuffleModel.pdf">[pdf]</a><br><br>
+Draft of full version  <a  href="https://arxiv.org/abs/2009.13510">[arXiv]</a><br><br>
 
 
 <div class="box">
@@ -485,7 +486,7 @@ Soon...
 <strong>A Tight Lower Bound on Adaptively Secure Full-Information Coin Flip</strong>  <img src="new.png" class=update1><br>
 <span class=abslide>[abstract]</span> <br>
 FOCS 2020<br>
-Draft of full version  <a href="papers/FullCoin/FullCoin.pdf">[pdf]</a><br><br>
+Draft of full version  <a  href="https://eccc.weizmann.ac.il/report/2020/071/">[eccc]</a><br><br>
 
 <div class="box">
 <p>
@@ -528,7 +529,7 @@ of statistically hiding commitment schemes from arbitrary one-way functions.
 <strong>A Tight Parallel Repetition Theorem for Partially Simulatable Interactive Arguments via Smooth KL-Divergence</strong>  <img src="new.png" class=update1><br>
 <span class=abslide>[abstract]</span> <br>
 Crypto 2020<br>
-Draft of full version  <a href="papers/TightPR/TightPR.pdf">[pdf]</a><br><br>
+Draft of full version  <a  href="https://eccc.weizmann.ac.il/report/2019/049/">[eccc]</a><br><br>
 
 <div class="box">
 <p>
@@ -565,7 +566,7 @@ by presenting a matching protocol.
 <strong>On the Round Complexity of Randomized Byzantine Agreement</strong> <br>
 <span class=abslide>[abstract]</span> <br>
 DISC  2019<br>
-Draft of full version  <a href="papers/ByzAgmntLB/BA_Full.pdf">[pdf]</a><br><br>
+Draft of full version  <a  href="https://arxiv.org/abs/1907.11329">[arXiv]</a><br><br>
 
 
 
@@ -601,7 +602,7 @@ Iftach Haitner and Noam Mazor and <a href="http://www.cs.haifa.ac.il/%7Eronen/">
 Characterization of Two-Party Differentially Private Computation</strong><br>
 <span class=abslide>[abstract]</span> <br>
 TCC 2019<br>
-Draft of full version  <a href="papers/LogRatioChannels/LogRatioChannels.pdf">[pdf]</a><br><br>
+Draft of full version  <a  href="https://eccc.weizmann.ac.il/report/2019/081/">[eccc]</a><br><br>
 
 <div class="box">
 <p>
@@ -653,7 +654,7 @@ Iftach Haitner  and Noam Mazor and <a href="http://www.cs.tau.ac.il/~roshman/">R
 <span class=abslide>[abstract]</span> <br>
 
 ITCS 2019<br>
-Draft of full version <a href="papers/KeyAgreementLB/KeyAgreementLB.pdf">[pdf]</a><br><br>
+Draft of full version  <a  href="https://eccc.weizmann.ac.il/report/2018/031/">[eccc]</a><br><br>
 
 <div class="box">
 <p>
@@ -681,12 +682,22 @@ and proof techniques are a first step in this direction.
 </div>
 </li>
 
+
+
+
+
+
+
+
+
+
+
 <li>
 Iftach Haitner and Nikolaos Makriyannis</a> and <a href="http://omrier.wix.com/eran-omri">Eran Omri</a> <br>
 <strong>On the Complexity of Fair Coin Flipping</strong> <br>
 <span class=abslide>[abstract]</span> <br>
 TCC 2018<br>
-Draft of full version  <a href="papers/CFtoKA/TwoPartyCoinFlipToKA.pdf">[pdf]</a><br><br>
+Draft of full version  <a  href="https://eccc.weizmann.ac.il/report/2018/084/">[eccc]</a><br><br>
 
 
 
@@ -719,7 +730,7 @@ Iftach Haitner  and <a href="http://omrier.wix.com/eran-omri">Eran Omri</a> and 
 <strong>Computational Two-Party Correlation</strong><br>
 <span class=abslide>[abstract]</span> <br>
 FOCS 2018<br>
-Draft of full version <a href="papers/ComputationalCorrelation/ComputationalCorrelation.pdf">[pdf]</a><br><br>
+Draft of full version  <a  href="https://eccc.weizmann.ac.il/report/2018/071/">[eccc]</a><br><br>
 
 <div class="box">
 <p>
@@ -793,7 +804,7 @@ setup, and is in some sense non-black box.
 Augmented Weak Martingales and Differentially Private Sampling</strong><br>
 <span class=abslide>[abstract]</span> <br>
 FOCS 2018<br>
-Draft of full version  <a href="papers/FairCoinLB/FairCoinLB.pdf">[pdf]</a><br><br>
+Draft of full version  <a  href="https://eccc.weizmann.ac.il/report/2017/168/">[eccc]</a><br><br>
 
 
 
@@ -827,7 +838,8 @@ The second result is a new sampling algorithm  that uses a differentially privat
 <a href="https://people.csail.mit.edu/rancohen/">Ran Cohen</a> and Iftach Haitner and  <a href="http://omrier.wix.com/eran-omri">Eran Omri</a>  and Lior Rotem<br>
 <strong>﻿From Fairness to Full Security in Multiparty Computation</strong> <br>
 <span class=abslide>[abstract]</span><br>
-SCN 2018  <a  href="https://link.springer.com/chapter/10.1007/978-3-319-98113-0_12">[link]</a><br>
+SCN 2018 <br>
+Draft of full version  <a  href="https://eprint.iacr.org/2019/1344">[ePrint]</a><br><br>
 </p>
 
 
@@ -872,7 +884,8 @@ This tutorial discusses  two rather recent computational notions  of entropy, bo
 <strong>Fair Coin Flipping: Tighter Analysis and the Many-Party Case</strong> <br>
 <span class=abslide>[abstract]</span>  <!-- <a href="papers/3PartyCF/ManyPartySeminar.ppsx">[slides]</a> --> <br>
 SODA 2017 <br>
-Draft of full version <a href="papers/3PartyCF/ManyPartyCF_Full.pdf">[pdf]</a> 
+Draft of full version  <a  href="https://eccc.weizmann.ac.il/report/2020/071/download">[eccc]</a><br><br>
+</p>
 
 
 <!-- <img src="up.png" class=update1>  -->
