--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@ extends to functions (over many bits) that "contain" an "embedded copy" of the X
 <strong>Distributional Collision Resistance Beyond One-Way Functions</strong><br>
 <span class=abslide>[abstract]</span> <br>
 Eurocrypt 2019<br>
-Draft of full version  <a href="papers/DCRH/DCRH.pdf">[pdf]</a><br><br>
+Draft of full version  <a  href="https://eprint.iacr.org/2019/115.pdf">[ePrint]</a><br><br>
 
 <div class="box">
 <p>
