--- a/index.html
+++ b/index.html
@@ -884,7 +884,7 @@ This tutorial discusses  two rather recent computational notions  of entropy, bo
 <strong>Fair Coin Flipping: Tighter Analysis and the Many-Party Case</strong> <br>
 <span class=abslide>[abstract]</span>  <!-- <a href="papers/3PartyCF/ManyPartySeminar.ppsx">[slides]</a> --> <br>
 SODA 2017 <br>
-Draft of full version  <a  href="https://eccc.weizmann.ac.il/report/2020/071/download">[eccc]</a><br><br>
+Draft of full version  <a  href="https://arxiv.org/abs/2104.08820">[arxiv]</a><br><br>
 </p>
 
 
