Changed GTACS address

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ The prizes are given for outstanding papers published in SIAM journals during th
 <b>Seminars   and Workshops </b>
 <UL>
 
- <li>Co-organizer  of the <a href="http://www.cs.tau.ac.il/cseminar/">Greater Tel Aviv Area Cryptography Seminar (GTACS)</a></li></br>
+ <li>Co-organizer  of the <a href="http://groups.google.com/group/crypto_seminar">Greater Tel Aviv Area Cryptography Seminar (GTACS)</a></li></br>
  
  
 <li>Co-organizer of the <a href="https://cryptolowerbounds.wordpress.com/">Lower Bounds in Cryptography 2019</a></li>
